# covid_data_cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
