[package]
name = "covid_data_cli"
version = "0.1.0"
authors = ["hcam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
maplit = "1.0.2"